added fix for pulling emails on exhibition/tournament games

--- a/WebContent/addsuspensions.xhtml
+++ b/WebContent/addsuspensions.xhtml
@@ -24,7 +24,7 @@
         <meta content='text/html; charset=UTF-8' http-equiv="Content-Type"/>
      </f:facet>
 	<f:metadata>
-		<f:event type="preRenderView" listener="#{profileBean.verifySU()}" />
+		<f:event type="preRenderView" listener="#{profileBean.verifyHasRoles('S-VICE;S-PRES')}" />
 	</f:metadata>
 </h:head>
 <ui:define name="content">
