--- a/WebContent/emailmanagers.xhtml
+++ b/WebContent/emailmanagers.xhtml
@@ -107,8 +107,8 @@
 					paginated="true" 
 					border="true"
 					searching="true"
-					onselect="ajax:emailmanagersBean.onSelect(player, typeOfSelection, indexes);"
-					ondeselect="ajax:emailmanagersBean.onDeselect(player, typeOfSelection, indexes);"
+					onselect="ajax:emailmanagersBean.onSelect(player);"
+					ondeselect="ajax:emailmanagersBean.onDeselect(player);"
 					>
 					<!--<b:dataTableColumn selectionMode="multiple" styleClass="mtrxColumn">
 						<f:facet name="header">
