--- a/WebContent/mail/permanentrelease.html
+++ b/WebContent/mail/permanentrelease.html
@@ -8,6 +8,10 @@
 <br><br>
 <table cellpadding="5" border="1" bordercolor="#000000" cellspacing="0" width="90%">
 	<tr>
+		<td width="40%" valign="top"><b>Status:</b></td>
+		<td colspan="5"><b>Pending</b></td>
+	</tr>
+	<tr>
 		<td width="40%"><b>Name(Last,First):</b></td>
 		<td align="left" colspan="5">:LASTNAME:,:FIRSTNAME:</td>
 	</tr>
@@ -62,10 +66,6 @@
 		<td>
 			:SKILLLEVEL:
 		</td>
-	</tr>
-	<tr>
-		<td width="40%" valign="top"><b>Status:</b></td>
-		<td colspan="5">Pending</td>
 	</tr>
 	<tr>
 		<td width="40%" valign="top"><b>Restrictions/Comments:</b></td>
