updated pages with current season dates

--- a/WebContent/mail/managerloireceipt.html
+++ b/WebContent/mail/managerloireceipt.html
@@ -4,7 +4,7 @@
 </head>	    
 
 <body>
-An LOI has been generated for the coach and club listed below on :LOIDATE:.
+An LOI has been generated for the manager and club listed below on :LOIDATE:.
 <br><br>
 <table cellpadding="5" border="1" bordercolor="#000000" cellspacing="0" width="90%">
 	<tr>
@@ -25,7 +25,7 @@ An LOI has been generated for the coach and club listed below on :LOIDATE:.
 		</td>
 	</tr>
 	<tr>
-		<th colspan="6" align="center"><b>Coach Information</b></th>
+		<th colspan="6" align="center"><b>Manager Information</b></th>
 	</tr>
 	<tr>
 		<td width="20%"><b>Name(Last,First):</b></td>
@@ -67,7 +67,22 @@ An LOI has been generated for the coach and club listed below on :LOIDATE:.
 						
 </table>	
 <table cellpadding="5" border="1" bordercolor="#000000" cellspacing="0" width="90%">
-	
+	<tr style="display: :AAADisplay:">
+		<td colspan="4">
+			<b>SCAHA Website Game Reporting Instructions</b>
+		</td>
+	</tr>
+	<tr style="display: :AAADisplay:">
+		<td colspan="4">
+			One of the aspects of being a team manager is having the responsiblity of reporting game results to the league(s).
+			The following document(s) will provide instructions on how to prep, print scoresheets, and report game results to the SCAHA.com site.
+
+			<div style="display: :AADisplay:">Click this <a href="http://scaha.com/scoresheets/SCAHA_43467AA-Manager-Instructions.pdf" target="_blank">link</a> for AA SCAHA game reporting instructions.</div>
+			<div style="display: :ABDisplay:">Click this <a href="http://scaha.com/scoresheets/SCAHA_43467A-BB-B-Manager-Instructions.pdf" target="_blank">link</a> for A/BB/B SCAHA game reporting instructions.</div>
+			<div style="display: :8UDisplay:">Click this <a href="http://scaha.com/scoresheets/SCAHA_434678U-Manager-Instructions.pdf" target="_blank">link</a> for 8U SCAHA game reporting instructions.</div>
+		</td>
+	</tr>
+		<!-need to display the link options for the manager instructions.-->
 </table>
 <table cellpadding="5" border="1" bordercolor="#000000" cellspacing="0" width="90%">
 	<tr>
@@ -101,7 +116,7 @@ An LOI has been generated for the coach and club listed below on :LOIDATE:.
 		</td>
 	</tr>
 	<tr>
-		<td><b>Coach Signature:</b></td>
+		<td><b>Manager Signature:</b></td>
         <td>xxxxxx</td>
         <td><b>Date:</b></td>
         <td>:LOIDATE:</td>
