--- a/WebContent/registrarviewlois.xhtml
+++ b/WebContent/registrarviewlois.xhtml
@@ -87,7 +87,7 @@
 				        </b:dataTableColumn>
 						<b:dataTableColumn >
 							<f:facet name="header">
-								2020/19 Team
+								2021 Team
 							</f:facet>
 							<h:outputText value="#{player.getPreviousteam()}," rendered="#{player.bcovid}"/><h:outputText value="&lt;br /&gt;" escape="false" rendered="#{player.bcovid}"/><h:outputText value="#{player.getPriorteam()}" />
 						</b:dataTableColumn>
