added delete and update to add tryouts, added manager documentation to loi email

--- a/WebContent/mail/managerloireceipt.html
+++ b/WebContent/mail/managerloireceipt.html
@@ -66,7 +66,7 @@ An LOI has been generated for the manager and club listed below on :LOIDATE:.
 	</tr>
 						
 </table>	
-<table cellpadding="5" border="1" bordercolor="#000000" cellspacing="0" width="90%">
+<table cellpadding="5" border="1" bordercolor="#000000" cellspacing="0" width="90%" style="display: :AAADisplay:">
 	<tr style="display: :AAADisplay:">
 		<td colspan="4">
 			<b>SCAHA Website Game Reporting Instructions</b>
@@ -76,7 +76,7 @@ An LOI has been generated for the manager and club listed below on :LOIDATE:.
 		<td colspan="4">
 			One of the aspects of being a team manager is having the responsiblity of reporting game results to the league(s).
 			The following document(s) will provide instructions on how to prep, print scoresheets, and report game results to the SCAHA.com site.
-
+			</br>
 			<div style="display: :AADisplay:">Click this <a href="http://scaha.com/scoresheets/SCAHA_43467AA-Manager-Instructions.pdf" target="_blank">link</a> for AA SCAHA game reporting instructions.</div>
 			<div style="display: :ABDisplay:">Click this <a href="http://scaha.com/scoresheets/SCAHA_43467A-BB-B-Manager-Instructions.pdf" target="_blank">link</a> for A/BB/B SCAHA game reporting instructions.</div>
 			<div style="display: :8UDisplay:">Click this <a href="http://scaha.com/scoresheets/SCAHA_434678U-Manager-Instructions.pdf" target="_blank">link</a> for 8U SCAHA game reporting instructions.</div>
