--- a/WebContent/clubviewdelinquencylist.xhtml
+++ b/WebContent/clubviewdelinquencylist.xhtml
@@ -45,12 +45,12 @@
 						    </f:facet>
 				            <h:outputText value="#{player.getLastname()}" />
 				        </b:dataTableColumn>
-						<b:dataTableColumn >
+						<!--<b:dataTableColumn >
 							<f:facet name="header">
 								Club
 							</f:facet>
 							<h:outputText value="#{player.getCurrentteam()}" />
-						</b:dataTableColumn>
+						</b:dataTableColumn>-->
 						<b:dataTableColumn >
 				            <f:facet name="header">
 						        DOB
