cleaned up loi dates and removed covid rules

--- a/WebContent/registrarviewlois.xhtml
+++ b/WebContent/registrarviewlois.xhtml
@@ -89,7 +89,7 @@
 							<f:facet name="header">
 								2021 Team
 							</f:facet>
-							<h:outputText value="#{player.getPreviousteam()}," rendered="#{player.bcovid}"/><h:outputText value="&lt;br /&gt;" escape="false" rendered="#{player.bcovid}"/><h:outputText value="#{player.getPriorteam()}" />
+							<h:outputText value="#{player.getPreviousteam()}" />
 						</b:dataTableColumn>
 						<b:dataTableColumn >
 				            <f:facet name="header">
