--- a/WebContent/workwithbirthcertificate.xhtml
+++ b/WebContent/workwithbirthcertificate.xhtml
@@ -78,15 +78,15 @@
 				        </b:dataTableColumn>
 				        <b:dataTableColumn >
 				            <f:facet name="header">
-						        2021Team
+						        2022Team
 						    </f:facet>
 				            <h:outputText value="#{player.getCurrentteam()}" />
 				        </b:dataTableColumn> 
 				        <b:dataTableColumn >
 				            <f:facet name="header">
-						        2020/19 Team
+						        2021 Team
 						    </f:facet>
-							<h:outputText value="#{player.getPreviousteam()}," rendered="#{player.bcovid}"/><h:outputText value="&lt;br /&gt;" escape="false" rendered="#{player.bcovid}"/><h:outputText value="#{player.getPriorteam()}" />
+							<h:outputText value="#{player.getPreviousteam()}" />
 				        </b:dataTableColumn> 
 				        <b:dataTableColumn >
 				            <f:facet name="header">
